--- a/todo/todo/templates/todos/yksi_listaus.html
+++ b/todo/todo/templates/todos/yksi_listaus.html
@@ -1,13 +1,22 @@
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>TODO-lista</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Importing fonts from Google -->
+        <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
+        {% load static %}
+
+        <!-- Using stylesheet named, mun_stylet.css -->
+         <link rel="stylesheet" type="text/css" href="{% static 'mun_stylet.css' %}">
     </head>
-    <body>
-        <h1>Tehtäväsi</h1>
-        <p>
-        {% for tehtava in todo_list %}
-        {{ tehtava.muistiinpano }}
-        {% endfor %}
-        </p>
+    <body style="background-color: #FBFDFF;">
+        <h1>Your Mission...</h1>
+        <ul>
+            {{ todo.muistiinpano }}
+        </ul>
     </body>
 </html>
