--- a/todo/todo/templates/todos/yksi_listaus.html
+++ b/todo/todo/templates/todos/yksi_listaus.html
@@ -10,11 +10,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
         {% load static %}
 
-        <!-- Using stylesheet named, mun_stylet.css -->
+        <!-- Using stylesheet named, "mun_stylet.css" -->
          <link rel="stylesheet" type="text/css" href="{% static 'mun_stylet.css' %}">
     </head>
     <body style="background-color: #FBFDFF;">
-        <h1>Your Mission...</h1>
+        <h1>Tehtäväsi...</h1>
         <ul>
             {{ todo.muistiinpano }}
         </ul>
