--- a/todo/todo/static/mun_stylet.css
+++ b/todo/todo/static/mun_stylet.css
@@ -1,4 +1,13 @@
-h1 {
+.keskitetty-nakyma {
+    width: 600px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 3px;
+    box-shadow: 6px 2px 30px 0px rgba(0,0,0,0.75);
+}
+
+h1.heading-one {
     font-size: 45px;
     font-family: 'Rampart One', cursive;
     font-style: italic;
