--- a/todo/todo/templates/todos/poista_tehtava.html
+++ b/todo/todo/templates/todos/poista_tehtava.html
@@ -15,13 +15,15 @@
         <link rel="stylesheet" type="text/css" href="{% static 'mun_stylet.css' %}">
     </head>
     <body>
-        <h2>Päivitä Tehtäväsi</h2>
+        
+        <p>Oletko varma, että haluat poistaa "{{tehtava.otsikko}}"?</p>
 
-        <form method="POST" action="">
+        <form method="POST">
             {% csrf_token %}
-
-            {{form}}
-            <input type="submit" name="Päivitä Tehtävä">
+            <input type="submit" name="Hyväksy">
         </form>
+
+        <a href="{% url "index" %}">Peruuta</a>
+        
     </body>
 </html>
