Lisätty <br> poista_tehtävä sivulle

--- a/todo/todo/templates/todos/poista_tehtava.html
+++ b/todo/todo/templates/todos/poista_tehtava.html
@@ -21,7 +21,7 @@
         <form method="POST">
             {% csrf_token %}
             <input type="submit" name="Hyväksy">
-        </form>
+        </form><br>
 
         <a href="{% url "index" %}">Peruuta</a>
         
